Mostly-working website.

--- a/sass/hallo.scss
+++ b/sass/hallo.scss
@@ -5,3 +5,6 @@ $color-hover: #333;
 @import 'hallo/variables';
 @import 'hallo/base';
 @import 'hallo/layout';
+@import 'variables';
+@import 'mixins';
+@import 'navbar';
